test/e2e/chainsaw/eventgateway/proxy-roundtrip/03-event-gateway-policies-assert.yaml
---
apiVersion: configuration.konghq.com/v1alpha1
kind: EventGatewayListenerPolicy
metadata:
  name: ($listener_policy_name)
status:
  (conditions[?type == 'Programmed']):
    - status: "True"
---
apiVersion: configuration.konghq.com/v1alpha1
kind: EventGatewayVirtualClusterPolicy
metadata:
  name: ($acl_policy_name)
status:
  (conditions[?type == 'Programmed']):
    - status: "True"
---
apiVersion: configuration.konghq.com/v1alpha1
kind: EventGatewayVirtualClusterConsumePolicy
metadata:
  name: ($consume_policy_name)
status:
  (conditions[?type == 'Programmed']):
    - status: "True"
